--- a/sass/views/_comments.scss
+++ b/sass/views/_comments.scss
@@ -128,7 +128,7 @@
   margin-bottom: 0;
   overflow: visible;
 
-  input {
+  input:not([type="checkbox"]) {
     @media (max-width: breakpoints.$container-mobile) {
       width: 100%;
     }
