--- a/sass/views/_index.scss
+++ b/sass/views/_index.scss
@@ -6,5 +6,6 @@
 @forward 'views/home';
 @forward 'views/queridinhos';
 @forward 'views/blog';
+@forward 'views/quem-somos';
 
 /* views/_index.scss */
