--- a/sass/views/_queridinhos.scss
+++ b/sass/views/_queridinhos.scss
@@ -17,6 +17,7 @@ article.queridinhos {
 
     .thumbnail {
       position: relative;
+      flex-basis: 40%;
       text-align: center;
       max-height: 184px;
 
