--- a/sass/layout/_general.scss
+++ b/sass/layout/_general.scss
@@ -27,8 +27,10 @@ section {
 }
 
 .sem-margem {
-  margin: 0;
-  padding: 0;
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
 }
 
 // Default structural element
