--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -10,7 +10,7 @@
   }
 
   @media (max-width: breakpoints.$container-mobile) {
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr !important;
   }
 
   article {
@@ -19,9 +19,9 @@
     grid-row: auto;
     overflow: hidden;
 
-    &.destaque-blog {
-      padding: 0;
-    }
+    // &.destaque-blog {
+    //   padding: 0;
+    // }
 
     &.post-destaque:nth-child(-n + 2) {
       grid-row: span 2;
