--- a/sass/layout/_site-header.scss
+++ b/sass/layout/_site-header.scss
@@ -167,11 +167,18 @@
 }
 
 .barra-navegação {
-  position: absolute;
-  // right: 1rem;
+  @media (max-width: breakpoints.$width-max-mobile) {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    right: 50px;
+  }
 
   .container {
     justify-content: end;
+    width: 100%;
+    padding-left: 0;
+    padding-right: 0;
   }
 
   @media (min-width: breakpoints.$container-ipad-landscape) {
