--- a/sass/views/_single.scss
+++ b/sass/views/_single.scss
@@ -1,4 +1,5 @@
 @use "helpers/animations";
+@use "variables/breakpoints";
 
 .article-content .categories,
 .article-content .tags,
@@ -39,39 +40,71 @@
   color: var(--color-white);
 }
 
-.article-content .tags,
-.tags {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 0.3125rem;
-  margin-bottom: var(--spacing-text-margin-block);
-  margin-top: 0;
+.article-content {
+  .thumbnail {
+    max-height: 700px;
 
-  // stylelint-disable a11y/font-size-is-readable
-  a {
-    background-color: transparent;
-    border: 1px solid var(--color-black);
-    border-radius: 1.875rem;
-    box-shadow: none;
-    color: var(--color-black);
-    display: inline-block;
-    font-size: var(--typography-size-12);
-    margin-right: 4px;
-    padding: 0.0625rem 0.5rem;
-    transition: all animations.$transition-duration;
-    white-space: nowrap;
+    img {
+      display: block;
+      width: 80%;
+      max-width: 700px;
+      margin: 40px auto 60px;
+    }
+
+    &.livro-thumbnail {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 80%;
+      height: 340px;
+
+      img {
+        max-width: 123px;
+      }
+
+      @media (min-width: breakpoints.$width-max-mobile) {
+        height: 700px;
+
+        img {
+          max-width: 250px;
+        }
+      }
+    }
   }
 
-  a:hover,
-  a:focus {
-    background-color: var(--color-black);
-    border-color: var(--color-black);
-    color: var(--color-white);
+  .tags,
+  .tags {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.3125rem;
+    margin-bottom: var(--spacing-text-margin-block);
+    margin-top: 0;
+
+    // stylelint-disable a11y/font-size-is-readable
+    a {
+      background-color: transparent;
+      border: 1px solid var(--color-black);
+      border-radius: 1.875rem;
+      box-shadow: none;
+      color: var(--color-black);
+      display: inline-block;
+      font-size: var(--typography-size-12);
+      margin-right: 4px;
+      padding: 0.0625rem 0.5rem;
+      transition: all animations.$transition-duration;
+      white-space: nowrap;
+    }
+
+    a:hover,
+    a:focus {
+      background-color: var(--color-black);
+      border-color: var(--color-black);
+      color: var(--color-white);
+    }
   }
 }
 
-
-.article-content {
+.block-single {
 
   .categories {
     justify-content: center;
@@ -112,6 +145,8 @@
 }
 
 .post-navigation {
+  margin-top: 80px;
+
   h2 {
     text-transform: uppercase;
   }
