--- a/sass/navigation/_nav-desktop.scss
+++ b/sass/navigation/_nav-desktop.scss
@@ -16,7 +16,7 @@
   --typography-weight-main-level: var(--typography-weight-medium);
   --padding-main-level-horizontal: 0;
   --padding-main-level-vertical: 0.375rem;
-  --color-main-level: var(--color-white);
+  --color-main-level: var(--cinza-claro);
   --color-hover-main-level: var(--color-white);
   --gap-between-dropdown-toggle: 0.9375rem;
   --gap-main-level-horizontal: 1.5625rem;
