--- a/sass/layout/_site-header.scss
+++ b/sass/layout/_site-header.scss
@@ -27,7 +27,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 1rem 50px 1rem 1rem;
+  padding: 1rem;
 
   @media (min-width: breakpoints.$container-ipad-landscape) {
     justify-content: space-between;
@@ -35,7 +35,7 @@
 
   p {
     margin: 0;
-    font-size: .9rem;
+    font-size: .8rem;
   }
 }
 
