--- a/sass/views/_single.scss
+++ b/sass/views/_single.scss
@@ -31,6 +31,11 @@
   transition: all animations.$transition-duration;
   text-decoration: none;
   text-transform: uppercase;
+
+  &.current {
+    background-color: var(--color-black);
+    color: var(--color-white);
+  }
 }
 
 .categories a:hover,
