--- a/sass/gutenberg/blocks/_ctas.scss
+++ b/sass/gutenberg/blocks/_ctas.scss
@@ -50,7 +50,7 @@ img.cta-image {
   display: flex;
   max-width: breakpoints.$container-mobile;
   max-height: 240px;
-  min-height: 225px;
+  height: 100%;
   background-color: var(--color-white);
   padding: 20px;
   gap: 20px;
@@ -60,7 +60,7 @@ img.cta-image {
     flex-direction: column;
     justify-content: space-between;
     flex-grow: 1;
-    flex-basis: 150%;
+    // flex-basis: 150%;
 
     .button {
       font-weight: var(--typography-weight-medium);
