--- a/sass/views/_single.scss
+++ b/sass/views/_single.scss
@@ -107,6 +107,13 @@
       color: var(--color-white);
     }
   }
+
+  figure {
+    img {
+      display: block;
+      margin: inherit;
+    }
+  }
 }
 
 .block-single {
