--- a/sass/gutenberg/layout/_content.scss
+++ b/sass/gutenberg/layout/_content.scss
@@ -14,7 +14,7 @@
 .article-content>[class^='wp-block-'],
 .is-root-container>*,
 .article-content>*:not(.livros) {
-  line-height: var(--typography-paragraph-line-height);
+  // line-height: var(--typography-paragraph-line-height);
   margin-left: auto;
   margin-right: auto;
   max-width: breakpoints.$width-max-article;
