--- a/sass/layout/_general.scss
+++ b/sass/layout/_general.scss
@@ -178,14 +178,14 @@ a.sublinhado-bonito,
 .post-title a {
   position: relative;
   display: inline;
-  background-image: linear-gradient(var(--cinza-escuro), var(--cinza-escuro));
-  background-size: 0% 2px;
+  background-image: linear-gradient(var(--cinza-escuro) 49%, var(--color-white) 50%);
+  background-size: 0 1px;
   background-repeat: no-repeat;
   background-position: 0 100%;
   transition: background-size 0.3s ease-in-out;
 
   &:hover {
-    background-size: 100% 2px;
+    background-size: 100% 1px;
   }
 }
 
