--- a/sass/views/_home.scss
+++ b/sass/views/_home.scss
@@ -165,7 +165,7 @@ time {
     margin-bottom: 40px;
 
     @media (min-width: breakpoints.$width-max-mobile) {
-      height: 110px;
+      // height: 110px;
     }
 
     h3,
@@ -198,6 +198,7 @@ time {
       color: var(--azul-leitura);
       font-weight: var(--typography-weight-semibold);
       text-transform: uppercase;
+      text-align: left;
       margin: 0;
     }
 
@@ -206,6 +207,11 @@ time {
       top: 0;
       width: auto;
     }
+  }
+
+  .resenha-citacao {
+    text-decoration: none;
+    color: var(--color-paragraph);
   }
 
   .resenha-data {
