ID no `value` do form, remove autor de queridinhos

--- a/sass/views/_queridinhos.scss
+++ b/sass/views/_queridinhos.scss
@@ -54,6 +54,7 @@ article.queridinhos {
 
       h3 {
         margin: 0;
+        font-size: var(--typography-size-20);
       }
 
       .q-c-d-colaborador {
