Entrega homologação RH

--- a/sass/views/_index.scss
+++ b/sass/views/_index.scss
@@ -7,5 +7,6 @@
 @forward 'views/queridinhos';
 @forward 'views/blog';
 @forward 'views/quem-somos';
+@forward 'views/rh';
 
 /* views/_index.scss */
