--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -44,3 +44,15 @@
     }
   }
 }
+
+.grid-4 {
+  display: grid;
+  gap: 40px;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.grid-6 {
+  display: grid;
+  gap: 40px;
+  grid-template-columns: repeat(6, 1fr);
+}
