Removendo vagas da busca, Página da revista, limpeza

--- a/sass/gutenberg/blocks/_ctas.scss
+++ b/sass/gutenberg/blocks/_ctas.scss
@@ -69,7 +69,7 @@ img.cta-image {
     }
   }
 
-  .thumbnail {
+  .revista-thumbnail {
     flex-basis: fit-content;
     flex-shrink: 1;
     display: flex;
