--- a/sass/gutenberg/blocks/_ctas.scss
+++ b/sass/gutenberg/blocks/_ctas.scss
@@ -80,3 +80,25 @@ img.cta-image {
     }
   }
 }
+
+.article-content {
+
+  .revista-container {
+    max-height: initial;
+    max-width: initial;
+    gap: 40px;
+    justify-content: space-evenly;
+
+    .conteudo {
+      max-width: 400px;
+
+      a {
+        font-size: 1.1rem;
+      }
+
+      h2 a {
+        font-size: 2.3rem;
+      }
+    }
+  }
+}
