--- a/sass/layout/_site-header.scss
+++ b/sass/layout/_site-header.scss
@@ -91,6 +91,7 @@
     padding: 40px 54px 40px 50px;
     min-height: 100px;
     width: 100vw;
+    max-width: 300px;
 
     @media (min-width: breakpoints.$container-ipad-landscape) {
       max-width: 400px;
@@ -99,6 +100,7 @@
     svg {
       height: 100%;
       max-height: 30px;
+      min-width: 200px;
       width: auto;
 
       @media (min-width: breakpoints.$container-ipad-landscape) {
@@ -138,6 +140,8 @@
         color: var(--cinza-escuro);
         font-size: 1rem;
         padding: 1rem;
+        appearance: initial;
+        -webkit-appearance: none;
       }
 
       button {
@@ -171,7 +175,8 @@
     position: absolute;
     width: 50px;
     height: 50px;
-    right: 50px;
+    top: 88px;
+    right: 0;
   }
 
   @media (min-width: breakpoints.$width-max-mobile) {
