Lojas duplicadas na busca do Onde Estamos

--- a/sass/features/_lojas.scss
+++ b/sass/features/_lojas.scss
@@ -48,7 +48,7 @@
     font-size: var(--typography-paragraph-size);
     margin: 0;
     padding: 33px 23px 33px 63px;
-    background-image: url(../../svg/marcador-cinza.svg);
+    background-image: url(../../svg/marcador.svg);
     background-position: 30px 50%;
     background-repeat: no-repeat;
     background-size: 20px;
