Pequeno ajuste lojas

--- a/sass/features/_lojas.scss
+++ b/sass/features/_lojas.scss
@@ -96,7 +96,7 @@
 
         h4 {
           padding-left: 33px;
-          background-image: url(../../svg/store.svg);
+          background-image: url(../../svg/store-white.svg);
           background-repeat: no-repeat;
           background-position: 0 50%;
           background-size: 23px;
