Ajustes form trabalhe conosco; ajustes git e gulp para prod.

--- a/sass/layout/_forms.scss
+++ b/sass/layout/_forms.scss
@@ -225,6 +225,9 @@ input[type="checkbox"]+label:focus {
   }
 }
 
+.destaque-vermelho label {
+  color: #ff0060 !important;
+}
 
 .form-seliga {
   display: flex;
