--- a/sass/views/_index.scss
+++ b/sass/views/_index.scss
@@ -4,6 +4,7 @@
 @forward 'views/single';
 @forward 'views/comments';
 @forward 'views/home';
+@forward 'views/lojas';
 @forward 'views/queridinhos';
 @forward 'views/blog';
 @forward 'views/quem-somos';
