mini-ajuste de aparência de formulário

--- a/sass/views/_rh.scss
+++ b/sass/views/_rh.scss
@@ -143,8 +143,14 @@ input[type="radio"],
 input[type="checkbox"],
 select,
 textarea {
-  padding: 14px 20px !important;
   background-color: var(--color-white);
+}
+
+select,
+textarea,
+input[type="text"],
+input[type="email"] {
+  padding: 14px 20px !important;
 }
 
 
