Popup modal com o erro de CPF

--- a/sass/views/_rh.scss
+++ b/sass/views/_rh.scss
@@ -146,11 +146,14 @@ textarea {
   background-color: var(--color-white);
 }
 
-select,
-textarea,
-input[type="text"],
-input[type="email"] {
-  padding: 14px 20px !important;
+.candidato-controles {
+
+  select,
+  textarea,
+  input[type="text"],
+  input[type="email"] {
+    padding: 14px 20px 15px;
+  }
 }
 
 
