--- a/sass/features/_index.scss
+++ b/sass/features/_index.scss
@@ -2,6 +2,7 @@
 @forward 'features/gallery';
 @forward 'features/pagination';
 @forward 'features/slider';
+@forward 'features/modal';
 // @forward 'features/gravity-forms';
 
 /* features/_index.scss */
