Ajuste escondendo busca somente em lojas

--- a/sass/layout/_site-header.scss
+++ b/sass/layout/_site-header.scss
@@ -173,7 +173,8 @@
       }
     }
 
-    &:not(.page-id-155702, .page-template-archive-lojas) {
+    body.page-id-155702 &,
+    body.page-template-archive-lojas & {
       display: none;
     }
   }
