--- a/sass/layout/_site-header.scss
+++ b/sass/layout/_site-header.scss
@@ -39,6 +39,11 @@
     align-items: center;
     padding: 0;
 
+    &.busca-container {
+      flex-direction: column;
+      align-items: stretch;
+    }
+
     @media (min-width: breakpoints.$container-ipad-landscape) {
       justify-content: space-between;
     }
@@ -128,11 +133,12 @@
 
   .busca {
     background-color: var(--azul-leitura);
-    padding: 40px 54px;
+    padding: 20px 54px;
 
     @media (min-width: breakpoints.$container-ipad-landscape) {
       background-color: transparent;
       width: 550px;
+      padding: 40px 54px;
     }
 
     form {
@@ -197,7 +203,7 @@
     position: absolute;
     width: 50px;
     height: 50px;
-    top: 88px;
+    top: 100px;
     right: 0;
   }
 
