Ajustes gutenberg; modal apenas na página de banco de talentos e candidatura.

--- a/sass/gutenberg-editor-styles.scss
+++ b/sass/gutenberg-editor-styles.scss
@@ -44,3 +44,9 @@
 
 // Editor
 @use 'gutenberg/editor';
+
+// Home
+@use 'views/home';
+@use 'views/single';
+@use 'views/queridinhos';
+@use 'layout/grid';
