--- a/sass/views/_queridinhos.scss
+++ b/sass/views/_queridinhos.scss
@@ -2,7 +2,8 @@
 
 
 
-article.queridinhos {
+article.queridinhos,
+article.type-queridinhos {
   width: 100%;
   background-color: var(--color-white);
   padding: 40px;
