--- a/css/cashback.css
+++ b/css/cashback.css
@@ -65,9 +65,9 @@ body {
   position: relative;
   display: flex;
   flex-direction: column;
-  padding-right: 10vw;
+  padding-right: 5vw;
   background-image: url(../img/lateral.svg);
-  background-size: 10vw auto;
+  background-size: 5vw auto;
   background-repeat: repeat-y;
   background-position-x: 100%;
   min-height: 100vh;
@@ -126,15 +126,18 @@ body {
 }
 
 .coluna-texto h1 {
-  font-size: 2rem;
-  color: #d32f2f;
-  line-height: 1.3;
-  text-shadow:
-    0.5px 0.5px 0 #011C40,
-    -0.5px 0 0 #011C40,
-    0.5px 0 0 #011C40,
-    -0.5px 0.5px 0 #011C40,
-    0 0 2px #011C40;
+  color: #e74928;
+  text-shadow: 0.3px 0.3px 0 #681A09, 0.3px 0 0 #4C1104, -0.3px 0.3px 0 #601808, -0.3px -0.3px 0 #601808, -0.3px 0.7px 0 #601808, -0.3px 1.5px 0 #601808;
+  line-height: 1;
+  font-weight: 900;
+  margin-bottom: 20px;
+}
+
+.coluna-texto h3 {
+  font-size: 1.6rem;
+  line-height: 1;
+  color: #863428;
+  margin: 0 0 40px 0;
 }
 
 .coluna-texto p {
@@ -154,12 +157,11 @@ body {
 
 .coluna-formulario {
   flex: 2;
-  /* min-width: 280px; */
   max-width: 350px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: #011C40;
+  background-color: #011c40cd;
   padding: 2rem;
   border-radius: 30px;
 }
@@ -353,9 +355,9 @@ body ::selection {
     position: fixed;
     bottom: 0;
     left: 0;
-    width: calc(50% - 550px);
+    width: calc(50% - 420px);
     height: 100%;
-    max-height: 1000px;
+    max-height: 570px;
     background-image: url(../img/noTelefone.webp);
     background-repeat: no-repeat;
     background-size: auto 100%;
