--- a/css/cashback.css
+++ b/css/cashback.css
@@ -141,6 +141,8 @@ body {
 }
 
 .coluna-texto p {
+  color: #333;
+  font-weight: 500;
   text-shadow: 0 0 8px #f7f4e8, 0 0 8px #f7f4e8, 0 0 8px #f7f4e8, 0 0 8px #f7f4e8, 0 0 8px #f7f4e8, 0 0 8px #f7f4e8, 0 0 8px #f7f4e8, 0 0 8px #f7f4e8, 0 0 8px #f7f4e8, 0 0 8px #f7f4e8;
 }
 
